changed directory name from static to site for no good reason

--- a/src/blog/templates/single-post.html
+++ b/src/blog/templates/single-post.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="single-bio">
                     <div class="single-bio-img">
-                        <img src="/static/img/chris.png" />
+                        <img src="/site/img/chris.png" />
                     </div>
                     <div class="single-bio-text">
                         <h3>Christopher Robison</h3>
