Mass updates to blog

--- a/src/blog/templates/single-post.html
+++ b/src/blog/templates/single-post.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-8">
                 <div class="single-content">
-                    <img src="img/single.jpg" />
+                    <img src="%%post_image%%" />
                     <h2>%%title%%</h2>
                     <h3>%%subtitle%%</h3>
                     %%content%%
@@ -43,7 +43,7 @@
                     <div class="sidebar-widget">
                         <div class="image-widget">
                             <a href="#">
-                                <img src="img/blog-1.jpg" alt="Image of children">
+                                <img src="/site/img/blog-1.jpg" alt="Image of children">
                             </a>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                     <div class="sidebar-widget">
                         <div class="image-widget">
                             <a href="#">
-                                <img src="img/blog-2.jpg" alt="Image of children">
+                                <img src="/site/img/blog-2.jpg" alt="Image of children">
                             </a>
                         </div>
                     </div>
