--- a/src/blog/templates/tab-posts.html
+++ b/src/blog/templates/tab-posts.html
@@ -2,13 +2,13 @@
     <div class="tab-post">
         <ul class="nav nav-pills nav-justified">
             <li class="nav-item">
-                <a class="nav-link" data-toggle="pill" href="#featured">Featured</a>
+                <a class="nav-link active" data-toggle="pill" href="#featured">Featured</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="pill" href="#popular">Popular</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" data-toggle="pill" href="#latest">Latest</a>
+                <a class="nav-link" data-toggle="pill" href="#latest">Latest</a>
             </li>
         </ul>
 
