--- a/src/components/end.html
+++ b/src/components/end.html
@@ -74,17 +74,17 @@
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-        <script src="lib/easing/easing.min.js"></script>
-        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-        <script src="lib/waypoints/waypoints.min.js"></script>
-        <script src="lib/counterup/counterup.min.js"></script>
-        <script src="lib/parallax/parallax.min.js"></script>
+        <script src="/site/lib/easing/easing.min.js"></script>
+        <script src="/site/lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="/site/lib/waypoints/waypoints.min.js"></script>
+        <script src="/site/lib/counterup/counterup.min.js"></script>
+        <script src="/site/lib/parallax/parallax.min.js"></script>
         
         <!-- Contact Javascript File -->
-        <script src="mail/jqBootstrapValidation.min.js"></script>
-        <script src="mail/contact.js"></script>
+        <script src="/site/mail/jqBootstrapValidation.min.js"></script>
+        <script src="/site/mail/contact.js"></script>
 
         <!-- Template Javascript -->
-        <script src="js/main.js"></script>
+        <script src="/site/js/main.js"></script>
     </body>
 </html>
