--- a/src/components/team.html
+++ b/src/components/team.html
@@ -13,13 +13,13 @@
                             </div>
                             <div class="team-text">
                                 <h2>Christopher Robison</h2>
-                                <p>Founder & CEO</p>
-                                <div class="team-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                <p>Founder / CEO</p>
+                            </div>
+                            <div class="team-social">
+                                <a href="https://x.com/thechrisrobison"><i class="fab fa-twitter"></i></a>
+                                <a href="https://facebook.com/thechrisrobison"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://linkedin.com/in/crobison"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="https://instagram.com/thechrisrobison"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -30,13 +30,13 @@
                             </div>
                             <div class="team-text">
                                 <h2>Kevin Ready</h2>
-                                <p>Founder</p>
-                                <div class="team-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                <p>Founder / CTO</p>
+                            </div>
+                            <div class="team-social">
+                                <a href="https://x.com/kevintweets"><i class="fab fa-twitter"></i></a>
+                                <a href=""><i class="fab fa-facebook-f"></i></a>
+                                <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                <a href=""><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -48,31 +48,31 @@
                             <div class="team-text">
                                 <h2>Danial Kanaan</h2>
                                 <p>Founder</p>
-                                <div class="team-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                            </div>
+                            <div class="team-social">
+                                <a href=""><i class="fab fa-twitter"></i></a>
+                                <a href=""><i class="fab fa-facebook-f"></i></a>
+                                <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                <a href=""><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-4.jpg" alt="Team Image">
+                                <img src="img/heath.jpg" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Heath Kornblum</h2>
                                 <p>Founder</p>
-                                <div class="team-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                           </div>
+                            <div class="team-social">
+                                <a href=""><i class="fab fa-twitter"></i></a>
+                                <a href=""><i class="fab fa-facebook-f"></i></a>
+                                <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                <a href=""><i class="fab fa-instagram"></i></a>
                             </div>
-                        </div>
+                         </div>
                     </div>
                 </div>
             </div>
