Localization of website and blog content. Currently only English and Spanish translations. Not sure if more needed

--- a/src/es/components/start.html
+++ b/src/es/components/start.html
@@ -51,7 +51,7 @@
                                 <a href="https://linkedin.com/company/thegivehub"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                             <div class="lang">
-                                <a href="/en/"><img class="lang-icon" src="/site/img/hello.svg"></a>
+                                <a onclick="app.switchLang('en');return false;" href="/en/"><img class="lang-icon" src="/site/img/hello.svg"></a>
                             </div>
                         </div>
                     </div>
