--- a/src/en/components/navbar.html
+++ b/src/en/components/navbar.html
@@ -8,22 +8,39 @@
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="causes.html" class="nav-item nav-link">Campaigns</a>
-                        <a href="event.html" class="nav-item nav-link">Events</a>
-                        <!--a href="blog.html" class="nav-item nav-link">Blog</a-->
+                        <a href="https://thegivehub.com/en/index.html" class="nav-item nav-link">Home</a>
+                        <div class="nav-item dropdown">
+                            <a href="https://thegivehub.com/en/about.html" class="nav-link dropdown-toggle" data-toggle="dropdown">About</a>
+                            <div class="dropdown-menu">
+                                <a href="https://thegivehub.com/en/service.html" class="dropdown-item">What We Do</a>
+                                <a href="https://thegivehub.com/en/team.html" class="dropdown-item">Meet The Team</a>
+                                <a href="https://thegivehub.com/en/event.html" class="dropdown-item">Events</a>
+                            </div>
+                        </div>
+                        <a href="https://blog.thegivehub.com/en/" class="nav-item nav-link">Blog</a>
+                        <a href="https://thegivehub.com/en/causes.html" class="nav-item nav-link">Causes</a>
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Participate</a>
+                            <div class="dropdown-menu">
+                                <a href="https://app.thegivehub.com/registration.html" class="dropdown-item">Signup</a>
+                                <a href="https://app.thegivehub.com/browse.html" class="dropdown-item">Browse Campaigns</a>
+                                <a href="https://thegivehub.com/en/donate.html" class="dropdown-item">Donate Now</a>
+                                <a href="https://thegivehub.com/en/volunteer.html" class="dropdown-item">Become A Volunteer</a>
+                                <a href="https://app.thegivehub.com/new-campaign.html" class="dropdown-item">Start a Campaign</a>
+                            </div>
+                        </div>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu">
-                                <a href="campaign.html" class="dropdown-item">Start a Campaign</a>
-                                <a href="service.html" class="dropdown-item">What We Do</a>
-                                <a href="team.html" class="dropdown-item">Meet The Team</a>
-                                <a href="donate.html" class="dropdown-item">Donate Now</a>
-                                <a href="volunteer.html" class="dropdown-item">Become A Volunteer</a>
+                                <a href="https://thegivehub.com/en/user-docs.html" class="dropdown-item">User Documentation</a>
+                                <a href="https://thegivehub.com/en/api.html" class="dropdown-item">API Documentation</a>
+                                <a href="https://thegivehub.com/sdk/" class="dropdown-item">SDK's</a>
+                                <a href="https://thegivehub.com/en/faqs.html" class="dropdown-item">FAQ's</a>
+                                <a href="https://thegivehub.com/en/architecture.html" class="dropdown-item">Platform Architecture</a>
+                                <a href="https://thegivehub.com/en/pitchdeck.html" class="dropdown-item">Funding Pitch Deck</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                         <a href="https://thegivehub.com/en/contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
             </div>
