--- a/src/en/components/end.html
+++ b/src/en/components/end.html
@@ -73,6 +73,7 @@
 
         <!-- JavaScript Libraries -->
         <script src="/js/jquery-3.4.1.min.js"></script>
+        <script src="/lib/fontawesome/js/all.min.js"></script>
         <script src="/js/bootstrap.bundle.min.js"></script>
         <script src="/lib/easing/easing.min.js"></script>
         <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
