--- a/src/en/components/team.html
+++ b/src/en/components/team.html
@@ -1,5 +1,5 @@
         <!-- Team Start -->
-        <div class="team">
+        <div class="team" data-parallax="scroll" data-image-src="/img/valley.jpg" >
             <div class="container">
                 <div class="section-header text-center">
                     <p>Meet Our Team</p>
