--- a/src/en/components/videomodal.html
+++ b/src/en/components/videomodal.html
@@ -8,7 +8,10 @@
                         </button>        
                         <!-- 16:9 aspect ratio -->
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" id="video" width="560" height="315" src="https://www.youtube.com/embed/eOjkoQqnWAw?si=_XHTnUfk1QZiJkz8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <video controls width="560" height="315" autoplay >
+                                <source src="/img/givehub-revolution.mp4" type="video/mp4" />
+                                Download the <a href="/media/cc0-videos/flower.mp4">MP4</a> video.
+                            </video>
                         </div>
                     </div>
                 </div>
