--- a/src/en/components/contact.html
+++ b/src/en/components/contact.html
@@ -1,31 +1,32 @@
         <!-- Contact Start -->
-        <div class="contact">
+        <div class="contact" data-parallax="scroll" data-image-src="/img/african-kids.jpg">
             <div class="container">
                 <div class="section-header text-center">
                     <p>Get In Touch</p>
                     <h2>Contact us for any questions!</h2>
                 </div>
-                <div class="contact-img">
+                <div class="contact-img" style="display:none">
                     <img src="/site/img/contact.jpg" alt="Image">
                 </div>
                 <div class="contact-form">
                         Complete the form below and hit the 'Send Message' button to send us a message.
                         <div id="success"></div>
-                        <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                        <form action="/api.php" name="sentMessage" id="contactForm" method="POST" novalidate="novalidate">
+                            <input type="hidden" name="form_type" value="contact">
                             <div class="control-group">
-                                <input type="text" class="form-control" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
+                                <input type="text" class="form-control" name="name" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group">
-                                <input type="email" class="form-control" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
+                                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group">
-                                <input type="text" class="form-control" id="subject" placeholder="Subject" required="required" data-validation-required-message="Please enter a subject" />
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required="required" data-validation-required-message="Please enter a subject" />
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group">
-                                <textarea class="form-control" id="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
+                                <textarea class="form-control" id="message" name="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div>
