Added QR codee to donate form component. Updated start.html with new nav links

--- a/src/en/components/causes.html
+++ b/src/en/components/causes.html
@@ -25,8 +25,8 @@
                             <p>Construction of a 5km water pipeline connecting remote villages to the main water supply, serving 2,500 residents and dramatically reducing water collection time for local families.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8f9a">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8f9a">Donate Now</a>
                         </div>
                     </div>                    <div class="causes-item">
                         <div class="causes-img">
@@ -48,8 +48,8 @@
                             <p>Construction of a permanent medical clinic serving 12 remote villages, powered by renewable energy and equipped with telemedicine capabilities.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8f9e">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8f9e">Donate Now</a>
                         </div>
                     </div>                    <div class="causes-item">
                         <div class="causes-img">
@@ -71,8 +71,8 @@
                             <p>Establishment of a demonstration farm and training facility to teach drought-resistant farming techniques to local farmers.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8fa0">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8fa0">Donate Now</a>
                         </div>
                     </div>                    <div class="causes-item">
                         <div class="causes-img">
@@ -94,8 +94,8 @@
                             <p>Construction of 6 new classrooms, computer lab, and modern facilities to improve education access for 300+ children.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8fa2">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8fa2">Donate Now</a>
                         </div>
                     </div>                    <div class="causes-item">
                         <div class="causes-img">
@@ -117,8 +117,8 @@
                             <p>Construction of 50 household sanitation facilities and implementation of community waste management system.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8fa4">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8fa4">Donate Now</a>
                         </div>
                     </div>                </div>
             </div>
