--- a/src/en/components/donate.html
+++ b/src/en/components/donate.html
@@ -1,7 +1,7 @@
         <!-- Donate Start -->
         <div class="donate" data-parallax="scroll" data-image-src="/site/img/donate.jpg">
             <div class="container">
-                <div class="row align-items-center">
+                <div class="row align-items-top">
                     <div class="col-lg-7">
                         <div class="donate-content">
                             <div class="section-header">
