--- a/src/en/components/legal/cookie-policy.html
+++ b/src/en/components/legal/cookie-policy.html
@@ -7,7 +7,7 @@ Cookie Policy
 <p>
 We use cookies to help improve your experience of
 <a href="https://thegivehub.com">https://thegivehub.com</a>. This cookie
-policy is part of Simple Sof tware, Inc.’s privacy policy, and covers
+policy is part of Simple Software, Inc.’s privacy policy, and covers
 the use of cookies between your device and our site. We also provide
 basic information on third-party services we may use, who may also use
 cookies as part of their service, though they are not covered by our
@@ -16,7 +16,7 @@ policy.
 <p>
 If you don’t wish to accept cookies from us, you should instruct your
 browser to refuse cookies from
-<a href="https://thegivehub.com">https://thegivehu b.com</a>, with the
+<a href="https://thegivehub.com">https://thegivehub.com</a>, with the
 understanding that we may be unable to provide you with some of your
 desired content and services.
 </p>
@@ -26,20 +26,20 @@ What is a cookie?
 <p>
 A cookie is a small piece of data that a website stores on your device
 when you visit, typically containing information about the website
-itself, a uni que identifier that allows the site to recognize your web
+itself, a unique identifier that allows the site to recognize your web
 browser when you return, additional data that serves the purpose of the
 cookie, and the lifespan of the cookie itself.
 </p>
 <p>
 Cookies are used to enable certain features (eg. logging in), to track
 site usage (eg. analytics), to store your user settings (eg. timezone,
-notificat ion preferences), and to personalize your content (eg.
+notification preferences), and to personalize your content (eg.
 advertising, language).
 </p>
 <p>
 Cookies set by the website you are visiting are normally referred to as
 “first-party cookies”, and typically only track your activity on that
-particula r site. Cookies set by other sites and companies (ie. third
+particular site. Cookies set by other sites and companies (ie. third
 parties) are called “third-party cookies”, and can be used to track you
 on other websites that use the same third-party service.
 </p>
@@ -75,9 +75,9 @@ Functionality cookies
 <p>
 Functionality cookies are used in collecting information about your
 device and any settings you may configure on the website you’re visiting
-(like lang uage and time zone settings). With this information, websites
+(like language and time zone settings). With this information, websites
 can provide you with customized, enhanced or optimized content and
-services. These cookies m ay be set by the website you’re visiting
+services. These cookies may be set by the website you’re visiting
 (first-party) or by third-party service. We use functionality cookies
 for selected features on our site.
 </p>
@@ -89,11 +89,11 @@ Targeting/advertising cookies are used in determining what promotional
 content is more relevant and appropriate to you and your interests.
 Websites may use them to deliver targeted advertising or to limit the
 number of times you see an advertisement. This helps companies improve
-the effectiveness of thei r campaigns and the quality of content
+the effectiveness of their campaigns and the quality of content
 presented to you. These cookies may be set by the website you’re
 visiting (first-party) or by third-party services. Targeting/advertising
 cookies set by third-parties may be used to track you on other websites
-that use the same third-party service. We use targeting/adv ertising
+that use the same third-party service. We use targeting/advertising
 cookies on our site.
 </p>
 <h3>
@@ -104,9 +104,9 @@ We may employ third-party companies and individuals on our websites—for
 example, analytics providers and content partners. We grant these third
 parties access to selected information to perform specific tasks on our
 behalf. They may also set third-party cookies in order to deliver the
-services they are p roviding. Third-party cookies can be used to track
+services they are providing. Third-party cookies can be used to track
 you on other websites that use the same third-party service. As we have
-no control over third-party coo kies, they are not covered by Simple
+no control over third-party cookies, they are not covered by Simple
 Software, Inc.’s cookie policy.
 </p>
 <h4>
@@ -115,7 +115,7 @@ Our third-party privacy promise
 <p>
 We review the privacy policies of all our third-party providers before
 enlisting their services to ensure their practices align with ours. We
-will neve r knowingly include third-party services that compromise or
+will never knowingly include third-party services that compromise or
 violate the privacy of our users.
 </p>
 <h3>
@@ -126,7 +126,7 @@ If you do not wish to accept cookies from us, you can instruct your
 browser to refuse cookies from our website. Most browsers are configured
 to accept cookies by default, but you can update these settings to
 either refuse cookies altogether, or to notify you when a website is
-trying to set or update a co okie.
+trying to set or update a cookie.
 </p>
 <p>
 If you browse websites from multiple devices, you may need to update
